books/projects/rac/tests/yaml_test/template/template_keyword_hint.cpp
#include <ac_int.h>

// RAC begin

template <int n>
int foo(ac_int<64, false> x) {
  return x.slc<n>(0);
}
